<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="dataBinder"
            type="com.lunasol.eamservice.DataBinder"/>
        <variable
            name="customer"
            type="com.lunasol.eamservice.Customer"/>
        <variable
            name="editFragment"
            type="com.lunasol.eamservice.EditUserFragment"/>
    </data>
    <LinearLayout
        android:id="@+id/edit_user_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/customer_first_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_first_name"
            android:text='@{customer.firstName}'/>

        <EditText
            android:id="@+id/customer_last_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_last_name"
            android:text="@{customer.lastName}"/>

        <EditText
            android:id="@+id/customer_vehicle_make_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_maker"
            android:text="@{customer.vehicle.make}"/>

        <EditText
            android:id="@+id/customer_vehicle_model_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_model"
            android:text="@{customer.vehicle.model}"/>

        <EditText
            android:id="@+id/customer_vehicle_miles_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_miles"
            android:inputType="numberDecimal"
            android:text="@{String.valueOf(customer.vehicle.miles)}"/>

        <EditText
            android:id="@+id/customer_vehicle_year_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_year"
            android:inputType="numberSigned"
            android:text="@{String.valueOf(customer.vehicle.year)}"/>

        <EditText
            android:id="@+id/customer_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_email"
            android:inputType="textEmailAddress"
            android:text="@{customer.email}"/>
        <EditText
            android:id="@+id/customer_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_phone"
            android:inputType="numberSigned"
            android:maxLength="10"
            android:text="@{customer.phone}"/>

        <EditText
            android:id="@+id/customer_address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_address"
            android:text="@{customer.address}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/customer_age"
            android:text="@{String.valueOf(customer.age)}"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_save"
            android:onClick="@{() -> editFragment.saveCustomerData()}"/>
    </LinearLayout>
</layout>